[project]
name = "cdm-ocr-service"
version = "1.0.0"
requires-python = ">= 3.12"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "alembic==1.14.0",
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "attrs==24.3.0",
    "cachetools==5.5.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "dbos==0.15.0",
    "deprecated==1.2.15",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "docstring-parser==0.16",
    "email-validator==2.2.0",
    "fastapi-cli==0.0.5",
    "fastapi==0.115.6",
    "filelock==3.16.1",
    "frozenlist==1.5.0",
    "fsspec==2024.12.0",
    "google-api-core==2.24.0",
    "google-auth==2.37.0",
    "google-cloud-aiplatform==1.75.0",
    "google-cloud-bigquery==3.27.0",
    "google-cloud-core==2.4.1",
    "google-cloud-resource-manager==1.14.0",
    "google-cloud-storage==2.19.0",
    "google-cloud-vision==3.9.0",
    "google-crc32c==1.6.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.66.0",
    "grpc-google-iam-v1==0.13.1",
    "grpcio==1.68.1",
    "grpcio-status==1.68.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.27.2",
    "huggingface-hub==0.27.0",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "jinja2==3.1.5",
    "jiter==0.8.2",
    "jsonpickle==4.0.1",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "litellm==1.56.4",
    "mako==1.3.8",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "multidict==6.1.0",
    "numpy==2.2.1",
    "openai==1.58.1",
    "opentelemetry-api==1.29.0",
    "opentelemetry-exporter-otlp-proto-common==1.29.0",
    "opentelemetry-exporter-otlp-proto-http==1.29.0",
    "opentelemetry-proto==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-semantic-conventions==0.50b0",
    "packaging==24.2",
    "propcache==0.2.1",
    "proto-plus==1.25.0",
    "protobuf==5.29.2",
    "psycopg==3.1.19",
    "psycopg-binary==3.1.19",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pydantic==2.10.4",
    "pydantic-core==2.27.2",
    "pygments==2.18.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "referencing==0.35.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "rsa==4.9",
    "shapely==2.0.6",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.36",
    "starlette==0.41.3",
    "tiktoken==0.8.0",
    "tokenizers==0.21.0",
    "tomlkit==0.13.2",
    "tqdm==4.67.1",
    "typer==0.15.1",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "watchfiles==1.0.3",
    "websockets==14.1",
    "wrapt==1.17.0",
    "yarl==1.18.3",
    "zipp==3.21.0",
    "slowapi==0.1.9",
    "redis==5.2.1",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".github",
    ".hg",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "migrations",
    "node_modules",
    "static",
    "sample",
    "data",
    "scripts",
]

# Same as Black.
line-length = 110

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I", "DJ", "INP", "TID", "UP", "YTT"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C4", "E", "F", "I", "TID", "UP"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
